# telematik2020_dns

./: Cargo.toml  README.md  index.html  requirements.md  runAll.py  runAll.sh
dns_server/: Cargo.toml
dns_server/src/: main.rs
recursive_resolver/: Cargo.toml
recursive_resolver/src/: main.rs
server_configs/: fuberlin.json  homework_fuberlin.json  pcpools_fuberlin.json  root_server.json  router_telematik.json  switch_telematik.json  telematik.json
shared/: Cargo.toml
shared/src/: lib.rs
stub_resolver/: Cargo.toml
stub_resolver/src/: main.rs
