[package]
name = "dns_server"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>", "docweirdo corin.baurmann@fu-berlin.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde_json = "*"
serde = "*"